2020-XX-XX: 4.1.1

	New features:

	jvm : added `--jvm path/to.jar` CLI argument instead of `-D jvm --java path`

	Bugfixes:

	all : fixed arguments ordering for @:structInit constructors (#9418)
	all : fixed display/references completion server request for static fields (#9440)
	all : fixed "Module not found" error reporting during macro execution in display requests (#9449)
	cpp : fixed StringTools.endsWith() for unicode characters (#8980)
	js/cpp : fixed catch var naming collision (#9413)
	interp : fixed throwing `haxe.macro.Error` outside of a macro context (#9390)

2020-05-13: 4.1.0

	New features:

	all : added tail recursion elimination (#8908)
	all : added unified exception handling (#9124)
	all : allow `try {} catch(e) {}` as a shortcut for `try {} catch(e:haxe.Exception) {}` (#9269)
	eval : added SSL support (#9009)
	jvm : the JVM target is no longer considered experimental

	General improvements:

	all : implemented different display support approach (#8962)
	all : improved display services related to reference finding
	all : added go-to-implementation support (#9043)
	all : made various improvements to diagnostics
	all : support completion for map keys (#9133)
	all : improved parser robustness for incomplete syntax (#9148)
	all : disallowed the combination of `@:overload` and inline (#3846)
	all : improved renaming of local variables (#9304)
	all : better inlining of for-loops with anonymous iterators (#8848)
	all : remove redundant final `return` in `Void` functions (#6420)
	all : remove redundant `continue` in loops (#8952)
	all : improved various compilation errors reporting
	all : allowed `(get,default)` property access combination (#6195, #8825)
	all : allowed ++ and -- on member properties of abstracts (#8930)
	js : use abstract type name for generating its implementation class (#9006)
	js : improve haxe.ds.StringMap implementation (#8909)
	js : improve interface checking and make it more minifier-friendly (#9178)